--- a/docker-compose/healthchecks.yml
+++ b/docker-compose/healthchecks.yml
@@ -1,25 +1,25 @@
-#Create a volume named - healthcecks-data first in portainer before creating this stack
+#IMPORTANT - Create a volume named - healthcecks-data first in portainer before creating this stack
 version: "3"
 services:
   healthchecks:
     image: healthchecks/healthchecks:latest
     container_name: healthchecks
     environment:
-      - ALLOWED_HOSTS=localhost
+      - ALLOWED_HOSTS=localhost #If you want to access from an external URL add the URL  here e.g. localhost, healthchecks.mydomain.com, hc.my2domain.com
       - DB=sqlite
       - DB_NAME=/data/hc.sqlite
       - DEBUG=False
-      - DEFAULT_FROM_EMAIL=<<add-tour email here>>
+      - DEFAULT_FROM_EMAIL=<<add-your email here>>
       - EMAIL_HOST=smtp.gmail.com #If using Gmail SMTP
       - EMAIL_HOST_PASSWORD=<<Gmail-app-password>>
       - EMAIL_HOST_USER=<<add-your-email here>>
       - EMAIL_PORT=587
       - EMAIL_USE_TLS=True
    #   - SECRET_KEY=
-      - SITE_ROOT=http://<home-ip>:8010 #(Example -http://10.10.1.20:8010)
+      - SITE_ROOT=http://<home-ip>:8010 #(Example -http://192.168.1.10:8010)
       - ALLOWED_HOSTS=*
     ports:
-      - 8010:8000
+      - 8010:8000 #The Web UI will be accessible on Port 8010. If you want to access on a different port change 8010 to desired number
     volumes:
       - healthchecks-data:/data
     restart: unless-stopped
