--- a/docker-compose/sonarr-radarr-prowlarr-plex-deluge.yml
+++ b/docker-compose/sonarr-radarr-prowlarr-plex-deluge.yml
@@ -75,3 +75,21 @@ services:
       - /mnt/data/tv:/tv  #Location where TV Show files are saved
       - /mnt/data/movies:/movies #Location where Movie files are saved
     restart: unless-stopped
+  jellyfin:
+    image: lscr.io/linuxserver/jellyfin:latest
+    container_name: jellyfin
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Asia/Kolkata
+      - JELLYFIN_PublishedServerUrl=<your server/pi IP> #optional
+    volumes:
+      - /home/<linuxusername>/appdata/jellyfin:/config #Replace <linuxusername> with your server/pi username
+      - /path/to/tvseries:/data/tvshows
+      - /path/to/movies:/data/movies
+    ports:
+      - 8096:8096
+      - 8920:8920 #optional
+      - 7359:7359/udp #optional
+      - 1900:1900/udp #optional
+    restart: unless-stopped
